k8s/istio/destinationrules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: account-mtls
spec:
  host: account-svc
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: content-mtls
spec:
  host: content-svc
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: analytics-mtls
spec:
  host: analytics-svc
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
