k8s/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: microservices-gw
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: microservices
spec:
  hosts:
    - "*"
  gateways:
    - microservices-gw
  http:
    - match:
        - uri:
            prefix: /account
      route:
        - destination:
            host: account-svc
            port:
              number: 80
    - match:
        - uri:
            prefix: /content
      route:
        - destination:
            host: content-svc
            port:
              number: 80
    - match:
        - uri:
            prefix: /analytics
      route:
        - destination:
            host: analytics-svc
            port:
              number: 80
